<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>bft.com</groupId>
  <artifactId>bc_lite_offline</artifactId>
  <version>v.3.7.1.1</version>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/version.txt</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
        <excludes>
          <exclude>**/version.txt</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <!--<descriptors>-->
            <!--<descriptor>assembly.xml</descriptor>-->
          <!--</descriptors>-->
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>com.bftcom.gui.loginForm.LoginForm</mainClass>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
          <finalName>${project.build.finalName}_full</finalName>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- bind to the packaging phase -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <packaging>jar</packaging>

  <name>bc_lite_offline</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.5</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>5.2.2.Final</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-c3p0</artifactId>
      <version>5.2.2.Final</version>
    </dependency>

    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.11.0</version>
    </dependency>


    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derby</artifactId>
      <version>10.12.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.6</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.5</version>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
    </dependency>

    <!--<dependency>-->
      <!--<groupId>com.fasterxml.jackson.core</groupId>-->
      <!--<artifactId>jackson-core</artifactId>-->
      <!--<version>2.9.3</version>-->
    <!--</dependency>-->


    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
      <version>2.9.4</version>
    </dependency>



    <!--from local repo installing components*-->
    <dependency>
      <groupId>birt-report-engine</groupId>
      <artifactId>birt-engineapi</artifactId>
      <version>3.7.2</version>
    </dependency>

    <dependency>
      <groupId>birt-report-engine</groupId>
      <artifactId>birt-coreapi</artifactId>
      <version>3.7.2</version>
    </dependency>

    <dependency>
      <groupId>birt-report-engine</groupId>
      <artifactId>birt-com.ibm.icu</artifactId>
      <version>4.4.2</version>
    </dependency>


    <dependency>
      <groupId>birt-report-engine</groupId>
      <artifactId>birt-modelapi</artifactId>
      <version>3.7.2</version>
    </dependency>


    <dependency>
      <groupId>birt-report-engine</groupId>
      <artifactId>birt-js</artifactId>
      <version>3.7.2</version>
    </dependency>

    <dependency>
      <groupId>birt-report-engine</groupId>
      <artifactId>birt-scriptapi</artifactId>
      <version>3.7.2</version>
    </dependency>

    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.3</version>
    </dependency>

    <!--end local repo installing components-->

  </dependencies>


</project>
